TicTacToe/Styles/styles.scss
﻿@font-face {
    font-family: Zig;
    src: url(../fonts/zig.ttf);
}

@font-face {
    font-family: Wellbutrin;
    src: url(../fonts/wellbutrin.ttf);
}

@font-face {
    font-family: Karmatic;
    src: url(../fonts/karmatic.ttf);
}

@font-face {
    font-family: DsAccent;
    src: url(../fonts/ds-accent.ttf);
}

@font-face {
    font-family: PermanentMarker;
    src: url(../fonts/PermanentMarker.ttf);
}

$blue-white-background: -webkit-linear-gradient(#52ADFF 20%, #63BDFF 20% 40%, #ADDEFF 40% 60%, #CEEFFF 60% 80%, #ffffff 80%);
$blue-white-large-background: -webkit-linear-gradient(#008AF9 24%, #00A0F7 24% 32%, #52ADFF 32% 40%, #63BDFF 40% 48%, #7ED2FC 48% 56%,#ADDEFF 56% 64%,#CEEFFF 64% 72%, #E3F5FC 72% 80%, #ffffff 80%);
$yellow-red-background: -webkit-linear-gradient(#FFFF9C 10%,#FFEF73 10% 18%,#FFDE52 18% 27%, #FFCE42 27% 36%, #FFAD31 36% 45%, #FF8C21 45% 54%, #FF7310 54% 63%, #EF6300 63% 72%, #DE5200 72% 80%, #DE4200 80% 90%, #DE0000 90%);
$red-yellow-background: -webkit-linear-gradient(#C60000 0% 25%, #E50405 27% 34%, #FA2400 36% 43%, #FF6A00 45% 52%, #FF8C21 54% 61%, #FFAD31 63% 70%, #FFCE42 72% 78%, #FFDE52 80% 88%, #FFEF73 90%);

$breakpoint-mobile-width: 600px;
$breakpoint-medium-width: 800px;

* {
    box-sizing: border-box;
    margin: 0;

    @media (max-width: $breakpoint-mobile-width) {
        font-size: .8em;
    }

    @media (max-width: $breakpoint-medium-width) {
        font-size: .9em;
    }
}

body {
    background: #ffffff;
    font-family: Wellbutrin;
}

    body:before {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background: repeating-linear-gradient(#0D122B, #0D122B 2px, #565B73 2px, #565B73 4px);
        opacity: 0.1;
        z-index: 100;
        content: "";
        pointer-events: none;
    }

#blazor-error-ui {
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

    #blazor-error-ui .dismiss {
        cursor: pointer;
        position: absolute;
        right: 0.75rem;
        top: 0.5rem;
    }

.main__wrapper {
    background-color: #222222;
    height: 100vh;
    width: 100vw;
    display: grid;
    grid-template-rows: 1fr 1fr 4em;
    justify-content: center;
    justify-items: center;
    align-content: center;
    align-items: center;
}

.main__header {
    font-family: Karmatic;
    background: $yellow-red-background;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 7em;

    @media (max-device-width: $breakpoint-medium-width) {
        font-size: 6em;
    }

    @media (max-device-width: $breakpoint-mobile-width) {
        font-size: 4em;
    }

    .big {
        font-size: 1.5em;
    }

    .small {
        font-size: .5em;
        vertical-align: bottom;
        background: -webkit-linear-gradient(#FFCE42, #DE4200);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
    }
}

.main__options {
    align-self: start;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    height: 100%;
    max-height: 8em;
    font-size: 3em;


    @media (max-device-width: $breakpoint-mobile-width) {
        font-size: 2.5em;
    }

    & h3 {
        background: $blue-white-background;
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
    }
}

.main__option-button {
    border: none;
    background-color: transparent;
    color: #ffffff;
    cursor: pointer;

    &:hover {
        background: -webkit-linear-gradient(#FFE875, #ffffff, #FFE875);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;

        &::before {
            content: ">";
            margin-right: 1em;
        }

        &::after {
            content: "<";
            margin-left: 1em;
        }
    }
}

.main__footer {
    font-size: 1.3em;
    color: #EFEFFF;
    text-align: center;
}


@mixin full-screen-container {
    width: 100vw;
    height: 100vh;
    display: grid;
    justify-content: center;
    justify-items: center;
    align-items: center;
    text-align: center;
    font-family: Wellbutrin;
    overflow: hidden;
}

.game__wrapper {
    width: 100vw;
    height: 100vh;
    background-image: url(../img/main-background.png);
    background-size: cover;
}

.loading-container__wrapper {
    @include full-screen-container;
    position: absolute;
    left: 0;
    top: 0;
}

.loading-container__header {
    font-size: 3rem;
    background: $blue-white-background;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: Wellbutrin;
}

.loading-container__dots::after {
    content: '';
    animation: dots 1.5s steps(4, end) infinite;
}

.expired-container__wrapper {
    @include full-screen-container;
    position: absolute;
    left: 0;
    top: 0;
    grid-template-rows: auto auto auto;
    gap: 2rem;
}

.expired-container__header {
    font-size: 5rem;
    background: $blue-white-background;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: Zig;
}

.expired-container__message {
    font-size: 2rem;
    color: #ffffff;
    max-width: 80vw;
}
/* ... */

